Bug 1007552 - To support publicnotification audio channel type for camera shutter. r=kinetik